this agent is overly verbose, will diagnose prompt later